parser/docs/grammar.txt
Funny — финальная грамматика парсера (HW2)


Запись: EBNF. Терминалы в кавычках — токены лексера HW1 (data/tokens.txt). { x } — повтор 0+ раз,
[ x ] — необязательно, | — выбор. Пробелы и комментарии // ... лексер отбрасывает.

Метод: LL(1), рекурсивный спуск (по функции на нетерминал, src/parser.cpp). Левая рекурсия выражений
заменена циклами { op operand }, что сохраняет левую ассоциативность.

 Верхний уровень

program      = definition { definition } ;                 (* пустая программа — ошибка *)
definition   = IDENT "(" [ varDef { "," varDef } ] ")"  ( formulaRest | functionRest ) ;
formulaRest  = "=>" predicate ;                            (* выбор ветки по токену после ")"; ";" в конце — не токен *)
functionRest = [ "requires" predicate ]
               "returns" varDef { "," varDef }
               [ "ensures" predicate ]
               [ "uses" varDef { "," varDef } ]
               statement ;
varDef       = IDENT ":" "int" [ "[" "]" ] ;               (* типы: int | int[] *)

 Операторы

statement    = block | ifStmt | whileStmt | assertStmt | assignment ;
block        = "{" { statement } "}" ;
ifStmt       = "if" "(" condition ")" statement [ "else" statement ] ;   (* else — к ближайшему if *)
whileStmt    = "while" "(" condition ")" [ "invariant" predicate ] statement ;
assertStmt   = ( "assert" | "assume" ) predicate ";" ;
assignment   = IDENT "[" expr "]" "=" expr ";"                       (* запись в массив *)
             | IDENT { "," IDENT } "=" expr ";" ;                    (* простое / кортежное *)
             (* кортежное (2+ имён слева): справа обязан быть вызов функции — проверяется парсером *)

Выбор ветки assignment после IDENT: "[" -> запись в массив, иначе список имён и "=".

 Арифметика (приоритет от высшего к низшему)

expr         = term { ( "+" | "-" ) term } ;                (* левоассоциативно *)
term         = unary { ( "*" | "/" ) unary } ;              (* левоассоциативно *)
unary        = "-" unary | primary ;                        (* унарный минус — самый приоритетный *)
primary      = INT
             | IDENT "(" [ expr { "," expr } ] ")"          (* вызов функции *)
             | IDENT "[" expr "]"                           (* чтение элемента массива *)
             | IDENT
             | "length" "(" [ expr { "," expr } ] ")"       (* встроенная length *)
             | "(" expr ")" ;

 Условия и предикаты (приоритет от низшего к высшему)

condition    = implies ;             (* if / while: true/false, сравнения, not, and, or, импликация, скобки *)
predicate    = or ;                  (* requires, ensures, invariant, тело формулы, assert/assume:
                                        то же, что condition, но БЕЗ импликации, плюс кванторы и formulaRef *)

implies      = or [ ( "->" | "→" ) implies ] ;              (* только в condition; ПРАВОассоциативно: a->b->c = a->(b->c) *)
or           = and { "or" and } ;                           (* левоассоциативно *)
and          = not { "and" not } ;                          (* левоассоциативно *)
not          = "not" not | boolPrimary ;                    (* самый приоритетный *)
boolPrimary  = "true" | "false"
             | quantifier                                   (* только в predicate *)
             | "(" ( implies | or ) ")"                     (* булево в скобках: в condition implies, в predicate or *)
             | comparison
             | formulaRef ;                                 (* только в predicate *)
comparison   = expr ( "==" | "!=" | "<=" | ">=" | "<" | ">" ) expr ;   (* не цепочкой: a<b<c — ошибка *)
quantifier   = ( "forall" | "exists" ) "(" varDef "|" predicate ")" ;
formulaRef   = IDENT "(" [ expr { "," expr } ] ")" ;

Две неоднозначности и как они сняты:
 1. "(" в начале boolPrimary: "(a+b) > c" (выражение) против "(a>b) and c" (булево). Парсер находит парную
    ")" и смотрит на токен после неё: арифметический оператор или сравнение -> это выражение,
    иначе булево в скобках. Это единственный просмотр дальше одного токена.
 2. formulaRef против вызова в сравнении: "p(x)" и "f(x) > 0" начинаются одинаково. Парсер разбирает
    выражение; если за ним нет оператора сравнения, а само оно — одиночный вызов IDENT(...), то это
    formulaRef (только в predicate; в condition — ошибка). Различие формула/функция — задача семантики.

 Лексика (из HW1; напоминание)

IDENT = [a-zA-Z][a-zA-Z0-9]*     INT = 0 | [1-9][0-9]*     Комментарий: // до \r или \n.
Ключевые слова: function returns requires ensures uses if else while invariant true false not and or
                forall exists length assert assume int.
(Токен "function" в лексере есть, но грамматика Funny его не использует: функция начинается с имени.)

 Соответствие описанию Funny и дополнения

Грамматика повторяет описание Funny. Отличий нет, кроме перечисленного ниже.

 1. Импликация есть только в condition (как в описании); в predicate её нет, "a -> b" в requires/ensures/invariant
    даёт ошибку. Допустимы оба написания: "->" (в тексте описания) и "→" (в EBNF описания).
 2. ";" в конце правила formula — конец правила EBNF (так же, как в правиле function, где после statement
    отдельного токена ";" нет), поэтому после формулы ";" не пишется; "p(x: int) => x > 0;" — ошибка.
 3. assert / assume: assert predicate ; / assume predicate ; — дополнение, которого требует задание HW2.
 4. Пустая программа (пусто, пробелы, одни комментарии) — ошибка: так требует задание HW2 (негативный тест
    «пустой ввод»); в описании Funny об этом ничего нет.
 5. Обновление массива a[i] = e; — отдельный узел ArrayAssign. По смыслу это сахар для функционального
    копирования a = store(a, i, e); раскрытие в store — задача следующих этапов (парсер узел не меняет).
 6. Присваивание одной переменной из вызова (x = f(a);) — обычный Assign с Call справа; TupleAssign —
    только при двух и более именах слева (справа обязан быть вызов).
 7. Парсер проверяет только синтаксис. Не проверяются: уникальность имён, типы, неизменяемость параметров,
    существование функций и формул, области видимости в requires/ensures/invariant, диапазон чисел.
    Пропущенный ensures отмечается отсутствием узла Ensures (по Funny он трактуется как false).
 8. Лексер HW1 принимает только ASCII: любой байт >= 128 — ошибка (токен ERR), а комментарий он обрывает на первом
    таком байте. Парсер это исправляет: если ERR стоит после "//" на той же строке, то остаток строки до \n, \r
    или конца файла — часть комментария (как в описании Funny), и ошибок не будет. Вне комментария не-ASCII остаётся
    ошибкой, исключение — "→", которую парсер превращает в OP_IMPLIES. Столбцы в сообщениях считаются в байтах.
 9. Ключевое слово там, где нужен идентификатор (имя переменной, функции), — ошибка с пометкой "is a reserved word".
    Слово "function" лексер знает как ключевое, но грамматика его не использует: определение начинается с имени.
